Complete CRUD functions for Category
Add functions to enable admins to create, update, or delete a category
Improve input validation for all requests
Update project dependencies
