# src/controllers/customer.controller.ts
@@ -3,12 +3,13 @@ import {
   Delete,
   JsonController,
   Post,
-  QueryParam,
+  QueryParams,
 } from "routing-controllers";
 import { BaseService, Context } from "../core";
 import { Service } from "typedi";
 import { OpenAPI } from "routing-controllers-openapi";
 import { CustomerRepository } from "../repositories";
+import { WhishlistQueryParams } from "./request/customer.request";
 
 @JsonController()
 @Service()
@@ -17,6 +18,7 @@ export class CustomerController extends BaseService {
     super(__filename);
   }
 
+  // #region Add an item to whishlist
   @Authorized()
   @Post("/customer/whishlist")
   @OpenAPI({
@@ -28,7 +30,7 @@ export class CustomerController extends BaseService {
     },
   })
   async addItemTowhishlist(
-    @QueryParam("itemId") itemId: string
+    @QueryParams() { itemId }: WhishlistQueryParams
   ): Promise<void> {
     this._logger.info(
       `Received a request to add item with id: ${itemId} to whishlist`
@@ -38,7 +40,9 @@ export class CustomerController extends BaseService {
 
     await this._customerRepository.addItemToWhishlist(_id as string, itemId);
   }
+  // #endregion
 
+  // #region Remove an item from whishlist
   @Authorized()
   @Delete("/customer/whishlist")
   @OpenAPI({
@@ -50,7 +54,7 @@ export class CustomerController extends BaseService {
     },
   })
   async removeItemFromwhishlist(
-    @QueryParam("itemId") itemId: string
+    @QueryParams() { itemId }: WhishlistQueryParams
   ): Promise<void> {
     this._logger.info(
       `Received a request to remove item with id: ${itemId} from whishlist`
@@ -63,4 +67,5 @@ export class CustomerController extends BaseService {
       itemId
     );
   }
+  // #endregion
 }
