# src/controllers/request/customer.request.ts
@@ -1,0 +1,6 @@
+import { IsMongoId } from "class-validator";
+
+export class WhishlistQueryParams {
+  @IsMongoId({ message: "Invalid or missing item's id" })
+  itemId: string;
+}
